# IRT-Wizard

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_response_scale_columns.py  003_add_analysis_logs_column.py  004_add_grouping_columns.py  005_add_multitenancy.py  006_add_experiments.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  datasets.py  exports.py  mlflow_api.py  organizations.py  projects.py  router.py  settings.py  users.py
backend/app/core/: __init__.py  analysis_logger.py  irt_engine.py  polytomous_engine.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  analysis.py  dataset.py  experiment.py  organization.py  organization_membership.py  project.py  role.py  user.py  user_settings.py
backend/app/schemas/: __init__.py  analysis.py  dataset.py  experiment.py  irt.py  organization.py  project.py  user.py
backend/app/services/: export_service.py  permissions.py  storage.py
backend/app/utils/: data_validation.py
backend/tests/: conftest.py  test_csv_data.py  test_data_summary_aggregation.py  test_irt_engine.py
backend/tests/test_api/: test_analysis_experiment_ownership.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
qa-screenshots/: QA-REPORT.md  sample_dichotomous_80x10.csv  (+2 more)
(+74 files in other folders)
